# disconcept

./: .pyre_configuration  README.md  main.py  pyproject.toml
conf/: main.yaml
disconcept/: __init__.py
disconcept/core/: __init__.py  collectors.py  contexts.py  downloaders.py  extractors.py  gnn.py  mst.py  relations.py  umap_plotters.py
disconcept/main/: __init__.py  collector.py  contexts.py  external.py  gnn.py  groups.py  relations.py  union_find.py
